--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -14,6 +14,7 @@
         %td= group.group_name
         %td= link_to 'Show', group
         %td= link_to 'Edit', edit_group_path(group)
+        %td= link_to 'Join group', join_group_group_path(group)
         %td= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
