--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -8,3 +8,6 @@
       -else
         =link_to 'Log in', new_user_session_path
         =link_to 'Sign In', new_user_registration_path
+      -if user_signed_in?
+        =link_to 'Groups', groups_path
+        =link_to 'My groups', user_groups_group_path(current_user)
