--- a/app/views/annoucements/show.html.haml
+++ b/app/views/annoucements/show.html.haml
@@ -6,18 +6,19 @@
 %p
   %b Description:
   = @annoucement.description
-%p
-  %b City:
-  = @annoucement.city
+- if @annoucement.city.present?
+  %p
+    %b City:
+    = @annoucement.city
 %p
   %b Exp date:
   = @annoucement.exp_date
 %p
   %b User:
-  = @annoucement.user
+  = @annoucement.user.username
 %p
   %b Group:
-  = @annoucement.group
+  = @annoucement.group.group_name
 
 = link_to 'Edit', edit_annoucement_path(@annoucement)
 \|
