--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -15,7 +15,7 @@
         %td= link_to 'Show', group
         %td= link_to 'Edit', edit_group_path(group)
         %td= link_to 'Join group', join_group_group_path(group)
-        %td= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Destroy', leave_group_path(group), method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
