--- a/app/views/groups/user_groups.html.haml
+++ b/app/views/groups/user_groups.html.haml
@@ -13,6 +13,6 @@
       %tr
         %td= group.group_name
         %td= link_to 'Show', group
-        %td= link_to 'Leave group', leave_group_group_path(group), method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Leave group', leave_group_path(group), method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
