Created comment table added link_to new and show comment to annoucements

--- a/app/views/annoucements/show.html.haml
+++ b/app/views/annoucements/show.html.haml
@@ -19,6 +19,10 @@
 %p
   %b Group:
   = @annoucement.group.group_name
+-if @annoucement.comment_ids.present?
+  =render 'comments/show'
+=link_to 'New comment', new_comment_path
+
 
 = link_to 'Edit', edit_annoucement_path(@annoucement)
 \|
