--- a/app/views/comments/index.html.haml
+++ b/app/views/comments/index.html.haml
@@ -17,9 +17,9 @@
         %td= comment.user
         %td= comment.annoucement
         %td= link_to 'Show', comment
-        %td= link_to 'Edit', edit_comment_path(comment)
+        %td= link_to 'Edit', edit_annoucement_comment_path(comment)
         %td= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
-= link_to 'New Comment', new_comment_path
+= link_to 'New Comment', new_annoucement_comment_path
