--- a/app/views/annoucements/show.html.haml
+++ b/app/views/annoucements/show.html.haml
@@ -21,7 +21,7 @@
   = @annoucement.group.group_name
 -if @annoucement.comment_ids.present?
   =render 'comments/show'
-=link_to 'New comment', new_comment_path
+=link_to 'New comment', new_annoucement_comment_path(annoucement_id: @annoucement.id)
 
 
 = link_to 'Edit', edit_annoucement_path(@annoucement)
