--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @comment do |f|
+= form_for [@annoucement, @comment] do |f|
   - if @comment.errors.any?
     #error_explanation
       %h2= "#{pluralize(@comment.errors.count, "error")} prohibited this comment from being saved:"
@@ -9,8 +9,6 @@
   .field
     = f.label :content
     = f.text_area :content
-  .field
-    = f.label :annoucement
-    = f.text_field :annoucement
   .actions
     = f.submit 'Save'
+
