--- a/app/views/comments/_show.html.haml
+++ b/app/views/comments/_show.html.haml
@@ -10,7 +10,8 @@
   %p
     %b Annoucement:
     = comment.annoucement_id
-  - if comment.user_id == current_user
-    = link_to 'Edit', edit_annoucement_comment_path(comment)
+  - if comment.user.id == current_user[:id]
+    = link_to 'Edit', edit_annoucement_comment_path(comment.id, comment.annoucement_id)
+    = link_to 'Delete comment', annoucement_comment_path(@annoucement, comment), method: :delete, data: {confirm: 'Are you sure?'}
 
-= link_to 'Back', annoucement_path
+
