--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -12,9 +12,10 @@
     - @groups.each do |group|
       %tr
         %td= group.group_name
-        %td= link_to 'Show', group
+
         - if UserGroup.where("group_id = ? AND user_id = ?", group.id, current_user.id).exists?
-          %td= link_to 'Leave group', leave_group_path(group), method: :delete, data: { confirm: 'Are you sure?' }
+          %td= link_to 'Show', group
+          %td= link_to 'Leave group', leave_group_group_path(group), method: :delete, data: { confirm: 'Are you sure?' }
         -else
           %td= link_to 'Join group', join_group_group_path(group)
         - if current_user[:id] == group.created_by
