--- a/app/views/annoucements/_form.html.haml
+++ b/app/views/annoucements/_form.html.haml
@@ -1,11 +1,4 @@
-= form_for @annoucement do |f|
-  - if @annoucement.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@annoucement.errors.count, "error")} prohibited this annoucement from being saved:"
-      %ul
-        - @annoucement.errors.full_messages.each do |message|
-          %li= message
-
+= form_for(Annoucement.new) do |f|
   .field
     = f.label :title
     = f.text_field :title
