--- a/app/views/annoucements/show.html.haml
+++ b/app/views/annoucements/show.html.haml
@@ -21,11 +21,23 @@
   = @annoucement.group.group_name
 -if @annoucement.user.id == current_user[:id]
   = link_to 'Edit', edit_annoucement_path(@annoucement)
--if @annoucement.comment_ids.present?
-  =render 'comments/show'
-=link_to 'New comment', new_annoucement_comment_path(annoucement_id: @annoucement.id)
+%p
+  = link_to 'Comments', '#', id: 'comments-link'
+%section#comments-section
+  #comments
+    =render @comments
+  =form_for [@annoucement, @annoucement.comments.new], remote: true do |f|
+    %fieldset
+      %ol
+        %li
+          = f.text_area :content, rows: 2, cols: 60,
+                        placeholder: 'Write a comment'
+        %li
+          = f.submit 'Post comment', class: 'button'
 
 
 
-\|
+
+
 = link_to 'Back', annoucements_path
+
