--- a/app/views/announcements/_form.html.haml
+++ b/app/views/announcements/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(Annoucement.new) do |f|
+= form_for @announcement do |f|
   .field
     = f.label :title
     = f.text_field :title
@@ -13,7 +13,6 @@
     = f.date_select :exp_date
   .field
     = f.label :group
-    =collection_select(:annoucement, :group_id, Group.all, :id, :group_name)
-    -#= collection_select(:annoucement, :group_id, UserGroup.where("user_id = ?", current_user[:id]), :id, :group_id)
+    =collection_select(:announcement, :group_id, Group.all, :id, :group_name)
   .actions
     = f.submit 'Save'
