--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -7,7 +7,7 @@
     %b Content:
     = comment.content
   - if comment.user.id == current_user[:id]
-    = link_to 'Delete comment', annoucement_comment_path(@annoucement, comment), method: :delete, data: {confirm: 'Are you sure?'}, remote: true
+    = link_to 'Delete comment', announcement_comment_path(@announcement, comment), method: :delete, data: {confirm: 'Are you sure?'}, remote: true
 
 
 
