added navbar, groups divided into columns, clean up some code

--- a/app/views/announcements/create.js.erb
+++ b/app/views/announcements/create.js.erb
@@ -1,1 +1,2 @@
-$('#announcement_<%= @announcement.id %>').append('<%= j render @announcement %>');
+$('#announcements').append('<%= j render @users_announcements %>');
+$('#new-announcement').fadeToggle()
