--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,2 +1,48 @@
 @import "/*"
 @import "bootstrap"
+
+%body
+  margin: 0
+  padding: 0
+
+.nav
+  width: 100%
+
+  ul
+    list-style: none
+    background-color: aquamarine
+    text-align: center
+    padding: 0
+    margin: 0
+    width: 100%
+  li
+    display: block
+    font-size: 1.2em
+    line-height: 40px
+    height: 40px
+    border-bottom: 1px solid #000000
+    float: left
+    margin: 0 10px
+  a
+    text-decoration: none
+    color: #fff
+    display: block
+    transition: .3s background-color
+  a:hover
+    background-color: blue
+  a.active
+    background-color: white
+    color: #444
+    cursor: default
+
+@media screen and (min-width: 600px)
+  .nav li
+    width: 120px
+    border-bottom: none
+    height: 50px
+    line-height: 50px
+    font-size: 1.4em
+
+.nav li
+  display: inline-block
+  margin-right: -4px
