--- a/app/assets/stylesheets/groups.sass
+++ b/app/assets/stylesheets/groups.sass
@@ -1,3 +1,25 @@
 // Place all the styles related to the groups controller here.
 // They will automatically be included in application.sass.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#new-group
+  display: none
+
+.container
+
+
+.row
+  margin: 50px 0
+  display: flex
+  justify-content: space-between
+
+
+.box
+  padding: 0 40px
+  width: -10%
+  border: 1px solid red !important
+
+
+  text-align: center
+
+
