Added grid based columns in group, change navbar, added font-awesome gem, cleanup some code

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,48 +1,76 @@
 @import "/*"
-@import "bootstrap"
+@import "font-awesome-sprockets"
+@import "font-awesome"
 
-%body
+*
   margin: 0
   padding: 0
+  font-family: Tahoma
+  box-sizing: border-box
+  -moz-box-sizing: border-box
+  -webkit-box-sizing: border-box
 
-.nav
-  width: 100%
+nav
 
+  margin: 0 0 30px 0
   ul
-    list-style: none
-    background-color: aquamarine
-    text-align: center
-    padding: 0
-    margin: 0
-    width: 100%
-  li
-    display: block
-    font-size: 1.2em
-    line-height: 40px
-    height: 40px
-    border-bottom: 1px solid #000000
-    float: left
-    margin: 0 10px
-  a
-    text-decoration: none
-    color: #fff
-    display: block
-    transition: .3s background-color
-  a:hover
-    background-color: blue
-  a.active
-    background-color: white
-    color: #444
-    cursor: default
+    li a
+      color: #FFF
+      text-decoration: none
+    background-color: teal
 
-@media screen and (min-width: 600px)
-  .nav li
-    width: 120px
-    border-bottom: none
-    height: 50px
-    line-height: 50px
-    font-size: 1.4em
+  ul>li
+    padding: 15px
+    display: inline-block
+    transition: all .3s ease
+    margin-left: -5px
+    &:not(:last-of-type):hover, &:first-of-type
+      background-color: #222
+    &:last-of-type
+      float: right
+      a .fa
+        font-size: 21px
+      position: relative
+      display: none
+    ol
+      position: absolute
+      top: 49px
+      right: 0
+      background: #333
+      text-align: center
+      list-style: none
+      display: none
+      > li
+        width: 100vw
+        color: #FFF
+        margin: 0
+        padding: 0
+        padding-top: 10px
+        padding-bottom: 10px
+        transition: all .3s ease
+        &:hover
+          a
+            margin: 20px
+          background: #000
+          cursor: pointer
+  input
+    opacity: .7
+    padding: 5px
+    float: right
+    display: none
 
-.nav li
-  display: inline-block
-  margin-right: -4px
+
+@media screen and (max-width: 680px)
+  nav ul
+    > li
+      &:not(:first-child)
+        display: none
+      &:last-of-type
+        display: block
+    input
+      display: inline
+
+@media screen and (min-width: 680px)
+  nav ul > ol > li
+    display: none
+
