--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,24 +1,25 @@
-%h1 Listing groups
+%main
+  %h1 Listing groups
 
-= link_to 'New Group', '#', id: 'new-group-link'
+  = link_to 'New Group', '#', id: 'new-group-link'
 
-#new-group
-  =render 'groups/form'
+  #new-group
+    =render 'groups/form'
 
 
-.wrapper
-  - @groups.each do |group|
-    .cell{id: "group_#{group.id}"}
-      %h3=group.group_name
-      %p= @count_users.count(group.id)
-      -if current_user[:id] != group.created_by
-        %p= link_to 'Show', group
-        - if current_user[:id] != group.created_by
-          %p= link_to 'Leave group', leave_group_group_path(group), method: :delete, id: 'group_button', data: { confirm: 'Are you sure?' }
-      -else
-        %p= link_to 'Join group', join_group_group_path(group)
-      - if current_user[:id] == group.created_by
-        %p= link_to 'Destroy', group, method: :delete, remote: true, data: { confirm: 'Are you sure?' }
-        %p= link_to 'Edit', edit_group_path(group)
-#pagingate_id
-  =will_paginate @groups, params: {is_active: true}
+  %section.cards
+    - @groups.each do |group|
+      .cell{id: "group_#{group.id}"}
+        %h3=group.group_name
+        %p= @count_users.count(group.id)
+        -if @user_group_ids.include?(group.id)
+          %p= link_to 'Show', group
+          -if current_user[:id] != group.created_by
+            %p= link_to 'Leave group', leave_group_group_path(group), method: :delete, id: 'group_button', data: { confirm: 'Are you sure?' }
+        -else
+          %p= link_to 'Join group', join_group_group_path(group)
+        -if current_user[:id] == group.created_by
+          %p= link_to 'Destroy', group, method: :delete, remote: true, data: { confirm: 'Are you sure?' }
+          %p= link_to 'Edit', edit_group_path(group)
+  #pagingate_id
+    =will_paginate @groups, params: {is_active: true}
