--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -3,25 +3,25 @@
 = link_to 'New Annoucement', new_announcement_path
 
 #new_announcement
-  = form_for @new_announcement, remote: true do |f|
-    .field
-      = f.label :title
-      = f.text_field :title
-    .field
-      = f.label :description
-      = f.text_area :description, rows: 10, cols: 60
-    .field
-      = f.label :city
-      = f.text_field :city
-    .field
-      = f.label :exp_date
-      = f.date_select :exp_date
-    .field
-      = f.label :group
-      =collection_select(:announcement, :group_id, Group.all, :id, :group_name)
-    .actions
-      = f.submit 'Save'
-
+  -#= form_for @new_announcement, remote: true do |f|
+  -#  .field
+  -#    = f.label :title
+  -#    = f.text_field :title
+  -#  .field
+  -#    = f.label :description
+  -#    = f.text_area :description, rows: 10, cols: 60
+  -#  .field
+  -#    = f.label :city
+  -#    = f.text_field :city
+  -#  .field
+  -#    = f.label :exp_date
+  -#    = f.date_select :exp_date
+  -#  .field
+  -#    = f.label :group
+  -#    =collection_select(:announcement, :group_id, @users_groups, :id, :group_name)
+  -#  .actions
+  -#    = f.submit 'Save'
+  =render 'announcements/form'
 
 %table
   %thead
