--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,12 +1,22 @@
-.nav
+%nav
   %ul
-    %li=link_to 'PLAYMATE', home_index_path
+    %li
+      %a=link_to 'PLAYMATE', home_index_path
     -if user_signed_in?
-      %li=link_to 'GROUPS', groups_path
+      %li
+        %a=link_to 'GROUPS', groups_path
     -if in_group
-      %li=link_to 'Annoucements', announcements_path
+      %li
+        %a=link_to 'Annoucements', announcements_path
     -if user_signed_in?
-      %li=link_to 'Sign Out', destroy_user_session_path, method: :delete
+      %li
+        %a=link_to 'Sign Out', destroy_user_session_path, method: :delete
     -else
-      %li=link_to 'Log in', new_user_session_path
-      %li=link_to 'Sign In', new_user_registration_path
+      %li
+        %a=link_to 'Log in', new_user_session_path
+      %li
+        %a=link_to 'Sign In', new_user_registration_path
+    %li
+      %a
+        %i.fa.fa-bars
+    %input{:type => "search"}/
