--- a/app/assets/stylesheets/groups.sass
+++ b/app/assets/stylesheets/groups.sass
@@ -7,14 +7,55 @@
 
 .cards
   display: grid
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr))
+  grid-template-columns: repeat(auto-fill, minmax(550px, 1fr))
   grid-gap: 30px
-  max-width: 1260px
+  max-width: 1860px
   margin: 50px auto 30px
 
   .cell
+    margin: 30px
     position: relative
-    justify-content: center
+    color: #ffffff
+    border-radius: 8px
+    .user-count
+      display: block
+      background-color: black
+      margin: 15px
+      padding: 10px
+      position: absolute
+      top: 0
+      left: 0
+    h3
+      position: absolute
+      top: 15px
+      text-align: center
+      width: 30%
+      left: 50%
+      right: -50%
+      transform: translate( -50%)
+      background: rgba(black, .5)
+      padding: 10px
+      border-radius: 5px
+    .container
+      position: absolute
+      bottom: 15px
+      width: 60%
+      left: 50%
+      right: -50%
+      transform: translate( -50%)
+      p
+        display: inline-flex
+        padding: 0 10px
+        background: rgba(black, .5)
+        a
+          text-decoration: none
+          color: white
+          padding: 5px
+    img
+      width: 100%
+      height: 100%
+      object-fit: cover
+      border-radius: 8px
 
 
 
