--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,22 +1,21 @@
 %nav
   %ul
     %li
-      %a=link_to 'PLAYMATE', home_index_path
+      =link_to 'PLAYMATE', home_index_path
     -if user_signed_in?
       %li
-        %a=link_to 'GROUPS', groups_path
+        =link_to 'GROUPS', groups_path
     -if in_group
       %li
-        %a=link_to 'Annoucements', announcements_path
+        =link_to 'Annoucements', announcements_path
     -if user_signed_in?
       %li
-        %a=link_to 'Sign Out', destroy_user_session_path, method: :delete
+        =link_to 'Sign Out', destroy_user_session_path, method: :delete
     -else
       %li
-        %a=link_to 'Log in', new_user_session_path
+        =link_to 'Log in', new_user_session_path
       %li
-        %a=link_to 'Sign In', new_user_registration_path
+        =link_to 'Sign In', new_user_registration_path
     %li
       %a
         %i.fa.fa-bars
-    %input{:type => "search"}/
