--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,21 +1,27 @@
-%nav
-  %ul
-    %li
-      =link_to 'PLAYMATE', home_index_path
-    -if user_signed_in?
-      %li
-        =link_to 'GROUPS', groups_path
-    -if in_group
-      %li
-        =link_to 'Annoucements', announcements_path
-    -if user_signed_in?
-      %li
-        =link_to 'Sign Out', destroy_user_session_path, method: :delete
-    -else
-      %li
-        =link_to 'Log in', new_user_session_path
-      %li
-        =link_to 'Sign In', new_user_registration_path
-    %li
-      %a
-        %i.fa.fa-bars
+.nav.nav--closed
+  .container.nav__container
+    .nav__wrap
+      %ul.nav__items.nav__items--primary
+        %li.nav__item.nav__item--home
+          =link_to 'PLAYMATE', home_index_path
+        -if user_signed_in?
+          %li.nav__item
+            =link_to 'GROUPS', groups_path
+          -if in_group
+            %li.nav__item
+              =link_to 'Annoucements', announcements_path
+          %li.nav__item
+            =link_to 'Archives', '#'
+      %ul.nav__items.nav__items--secondary
+        -if user_signed_in?
+          %li.nav__item
+            =link_to 'Sign Out', destroy_user_session_path, method: :delete
+        -else
+          %li.nav__item
+            =link_to 'Log in', new_user_session_path
+          %li.nav__item.nav__item--cta
+            =link_to 'Sign In', new_user_registration_path
+    %ul.nav__items.nav__items--mobile
+      %li.nav__item
+        %a
+          %i.fa.fa-bars
