--- a/app/assets/stylesheets/groups.sass
+++ b/app/assets/stylesheets/groups.sass
@@ -11,7 +11,6 @@
   grid-gap: 30px
   max-width: 1860px
   margin: 50px auto 30px
-
   .cell
     margin: 30px
     position: relative
@@ -57,8 +56,32 @@
       object-fit: cover
       border-radius: 8px
 
-
-
-
-
-
+.pagination
+  text-align: center
+  padding: 0.3em
+  cursor: default
+  a, span, em
+    padding: 0.2em 0.5em
+  .disabled
+    color: #aaaaaa
+  .current
+    font-style: normal
+    font-weight: bold
+    color: #ff0084
+  a
+    border: 1px solid #dddddd
+    color: #0063dc
+    text-decoration: none
+    &:hover, &:focus
+      border-color: #003366
+      background: #0063dc
+      color: white
+  .page_info
+    color: #aaaaaa
+    padding-top: 0.8em
+  .previous_page, .next_page
+    border-width: 2px
+  .previous_page
+    margin-right: 1em
+  .next_page
+    margin-left: 1em
