--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -1,3 +1,15 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.sass.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.index_container
+  width: 100%
+  height: 70vh
+  img
+    object-fit: fill
+    width: 100%
+    height: 70vh
+  h1
+    color: white
+    border: 1px solid white
+    padding: 10px
+    border-radius: 8px
+    position: absolute
+    top: 35%
+    left: 50%
