--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,4 @@
-%h1 Home#index
-%p Find me in app/views/home/index.html.haml
+.index_container
+
+  =image_tag 'header.jpg'
+  %h1 Meet your teammates
